crates/compiler/tests/parse_errors/exposing_comma.elm
module Main exposing (a,,b)
x = 1
